--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-dom": "16.4.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
     "commitizen": "^2.10.1",
-    "cz-conventional-changelog": "^2.1.0"
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.0.0-rc.9"
   }
 }
