--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
+    "@semantic-release/changelog": "^2.0.2",
+    "@semantic-release/git": "^5.0.0",
+    "@semantic-release/github": "^4.2.17",
+    "@semantic-release/npm": "^3.3.2",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.0.0-rc.9"
+    "husky": "^1.0.0-rc.9",
+    "semantic-release": "^15.6.0"
   }
 }
