--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "test": "jest --watch --silent --passWithNoTests",
+    "test:ci": "jest --silent --passWithNoTests",
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "cz": "git-cz"
+    "cz": "git-cz",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "apollo-boost": "^0.1.6",
@@ -31,6 +35,8 @@
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.0-rc.9",
-    "semantic-release": "^15.6.0"
+    "jest": "^23.1.0",
+    "semantic-release": "^15.6.0",
+    "travis-deploy-once": "^5.0.0"
   }
 }
