--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "apollo-boost": "^0.1.6",
     "apollo-link-context": "^1.0.8",
     "cookie": "^0.3.1",
+    "final-form": "^4.8.3",
+    "final-form-arrays": "^1.0.4",
     "graphql": "^0.13.2",
     "isomorphic-unfetch": "^2.0.0",
+    "lodash": "^4.17.10",
     "next": "6.1.1",
     "prop-types": "^15.6.1",
     "react": "16.4.1",
     "react-apollo": "^2.1.4",
-    "react-dom": "16.4.1"
+    "react-dom": "16.4.1",
+    "react-final-form": "^3.6.5",
+    "react-final-form-arrays": "^1.0.6",
+    "react-sortable-hoc": "^0.8.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
