--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "16.4.1",
     "react-final-form": "^3.6.5",
     "react-final-form-arrays": "^1.0.6",
-    "react-sortable-hoc": "^0.8.3"
+    "react-sortable-hoc": "^0.8.3",
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
