--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "16.4.1",
     "react-final-form": "^3.6.5",
     "react-final-form-arrays": "^1.0.6",
+    "react-final-form-listeners": "^1.0.1",
     "react-sortable-hoc": "^0.8.3",
     "styled-components": "^3.3.3"
   },
