feat(graphcool.yml): define a hook that add settings to new sites

--- a/graphcool/graphcool.yml
+++ b/graphcool/graphcool.yml
@@ -37,6 +37,12 @@ functions:
     handler:
       code: src/email-password/loggedInUser.ts
 
+  initSettings:
+    type: operationAfter
+    operation: Site.create
+    handler:
+      code: src/site/initSettings.js
+
 
 # Model/Relation permissions are used to limit the API access
 # To take the burden of thinking about those while development, we
