--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@semantic-release/npm": "^3.3.2",
     "babel-eslint": "^8.2.3",
     "commitizen": "^2.10.1",
+    "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
