--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@semantic-release/github": "^4.2.17",
     "@semantic-release/npm": "^3.3.2",
     "babel-eslint": "^8.2.3",
+    "babel-plugin-styled-components": "^1.5.1",
     "commitizen": "^2.10.1",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
